# ida_domain_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ida_domain_mcp/: ida_tools.py  main.py  types.py
tests/: agent.py  test_ida_mcp.py  test_ida_tools.py
tests/challenge/: Makefile  Readme.md
tests/challenge/binaries/: device_main
tests/challenge/solution/: solve.py
tests/challenge/src/: device_main.c  secure_check.c  secure_check.h  target_blob.h
tests/challenge/tools/: gen_target.py
