[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-domain-mcp"
version = "0.1.2"
description = "MCP plugin for IDA Pro/IDA Free that uses ida-domain for database access"
authors = [
    {name = "Mimi", email = "stevenjoezhang@gmail.com"},
    {name = "xxyyue", email = "xxyyyue@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0",
    "ida-domain>=0.3.5",
]

[project.urls]
Repository = "https://github.com/xxyyue/ida_domain_mcp"
Issues = "https://github.com/xxyyue/ida_domain_mcp/issues"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=9.0.1",
    "twine>=6.2.0",
    "openai-agents>=0.5.1",
    "dotenv>=0.9.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ida-domain-mcp = "ida_domain_mcp.main:main"
